# BatteryUI

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/cmake/: imgui.cmake
example/include/: Fonts.h  Headers.h  HomeUI.h
example/resources/: stylesheet copy.json  stylesheet.json  test1.txt  test2.txt  test3.txt
example/src/: main.cpp  render.cpp
include/BatteryUI/: BasicWidget.h  BatteryUI.h  Button.h  FileWatcher.h  Font.h  InternalDecl.h  InternalImpl.h  Property.h  RedrawNotifier.h  RootUI.h  Style.h  Theme.h  Window.h  common.h  exception.h  serialize.h  std_function.h  utility.h
include/BatteryUI/Widgets/: BasicWidget.h  Button.h  Child.h  Container.h  Dropdown.h  HorizontalGrid.h  VerticalGrid.h  WidgetConfig.h  Window.h
